fix: fix ability to generate a bottom aligned grid
Fix typo naming in naming of `.g__bottom`

--- a/styles/base/_b.grid.scss
+++ b/styles/base/_b.grid.scss
@@ -110,7 +110,7 @@ $grid-columns: setting(grid-cols);
 
 // Bottom-align grid cells
 @if ( setting(grid-bottom) ) {
-  .g--middle{
+  .g--bottom {
     > .g__cell{
       vertical-align: bottom;
     }
